link volunteers forms and fix safari flexbox gap issue

--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -42,9 +42,11 @@
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  gap: 1rem;
-  &.benevoles {
-    column-gap: 2rem;
+  &.many {
+    .button {
+      margin-right: 1rem;
+      margin-bottom: 1rem;
+    }
   }
 }
 
